Project URL added

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             Moje Projekty:
         </p>
         <ul class="project__list">
-            <li><a class="project__listItem" target="_blank" href="https://google.pl">Kalkulator Walut*</a></li>
+            <li><a class="project__listItem" target="_blank" href="https://hubert-youcode.github.io/currency-calculator/">Kalkulator Walut*</a></li>
         </ul>
         <p class="project__info">Aktywny link oznaczony *</p>
     </div>
