added image hosting

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="image">
-        <img class="image__item" src="../images/Image.png" alt="Hubert Kuszlik" width="250px" height="250px">
+        <img class="image__item" src="https://zapodaj.net/images/afe7de5b484c3.png" alt="Hubert Kuszlik" width="250px" height="250px">
     </div>
     <h1 class="header">Hubert Kuszlik</h1>
     <nav class="nav">
