--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="css/footer.css" rel="stylesheet">
     <!-- Skrypt -->
     <script src="script/script.js" defer></script>
+    <link rel="icon" href="images/icon.jpg">
 </head>
 
 <body class="body">
